Bug 359453 - Brush Tip Automatic Precision Level Interval Inconsistency
Summary: Brush Tip Automatic Precision Level Interval Inconsistency
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 2.9.11
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-15 23:17 UTC by Smomu
Modified: 2019-06-04 15:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Smomu 2016-02-15 23:17:20 UTC
Using the Automatic Precision setting (Brush Tip options), the Precision Level 4 lasts two intervals instead of one.

For example, setting Starting Brush Size to 0,00 px and Delta to 15,00 px, Precision Level 5 decreases to 4 at brush size 15,01 px (1 interval), but Precision Level 4 decreases to 3 only at brush size 45.01 px (2 intervals) instead of 30,01 px. The other levels decreases 1 interval correctly (3 to 2 at 60,01 px and 2 to 1 at 75,01 px).

I reproduced this using the Pixel, Color Smudge and Tangent Normal engines and other values for Starting Brush Size and Delta.

Reproducible: Always

Steps to Reproduce:
1. Check "Auto" next to the Precision slider at Brush Tip settings (Brush settings window);
2. The Precision Level won't refresh if you change the brush size with the Diameter slider, so close the brush settings window, change the brush size with the toolbar Size slider and open the brush settings window again.
3. Test different brush sizes to see when the Precision Level will change.

Actual Results:  
Precision Level 4 only decreases after 2 intervals.

Expected Results:  
Precision Level 4 should decrease after 1 interval.
Comment 1 vanyossi 2019-05-30 15:17:14 UTC
Git commit c8cb55a103c97dad5ba67129ca50f102210f4122 by Ivan Yossi.
Committed on 30/05/2019 at 15:16.
Pushed by ivany into branch 'master'.

Make auto precision values consistent.

M  +5    -5    plugins/paintops/libpaintop/kis_precision_option.cpp

https://invent.kde.org/kde/krita/commit/c8cb55a103c97dad5ba67129ca50f102210f4122
Comment 2 Halla Rempt 2019-06-04 15:21:33 UTC
Git commit e24b1c3946b8d397fb5a1637dec2d0872e8b04c2 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 04/06/2019 at 15:18.
Pushed by rempt into branch 'krita/4.2'.

Make auto precision values consistent.

M  +5    -5    plugins/paintops/libpaintop/kis_precision_option.cpp

https://invent.kde.org/kde/krita/commit/e24b1c3946b8d397fb5a1637dec2d0872e8b04c2