Make auto precision values consistent.

BUG:359453